<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_margin="@dimen/margin_small" />

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_password"
        android:layout_margin="@dimen/margin_small"/>

    <CheckBox
        android:id="@+id/check_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_use_fingerprint"
        android:layout_margin="@dimen/margin_small"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_create"
        android:layout_margin="@dimen/margin_small"/>

</LinearLayout>