<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small" />

    <Button
        android:id="@+id/button_unlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_unlock"
        android:layout_below="@id/edit_password"
        android:layout_margin="@dimen/margin_small" />

    <TextView
        android:id="@+id/text_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_fingerprint"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/hint_use_fingerprint"/>

</RelativeLayout>