<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout_display_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/title_display_options"
            android:layout_marginBottom="@dimen/margin_small"/>

        <Switch
            android:id="@+id/switch_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_dark_theme"/>
    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layout_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/title_security_options"
            android:layout_marginBottom="@dimen/margin_small"/>

        <Switch
            android:id="@+id/switch_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_use_fingerprint"/>

    </LinearLayout>

</LinearLayout>